           (Jan Tojnar)
  - #5496, ST_Clip all variants replaced, will require
           rebuilding of materialized views that use them (Regina Obe)
  - #5659, ST_DFullyWithin behaviour has changed to
           be ST_Contains(ST_Buffer(A, R), B) (Paul Ramsey)

* Deprecated signatures *
  - GH-761, ST_StraightSkeleton => CG_StraightSkeleton (Loïc Bartoletti)

* New Features *

  - #5055, add explicit <> geometry operator to prevent non-unique
           error with <> and != (Paul Ramsey)
  - Add ST_HasZ/ST_HasM (Loïc Bartoletti)
  - GT-123, postgis_sfcgal: CG_YMonotonePartition, CG_ApproxConvexPartition,
            CG_GreeneApproxConvexPartition and CG_OptimalConvexPartition
            (Loïc Bartoletti)
  - GT-156, postgis_sfcgal: CG_Visibility (Loïc Bartoletti)
  - GT-157, postgis_sfcgal: Add ST_ExtrudeStraightSkeleton (Loïc Bartoletti)
  - #5496, ST_Clip support for touched (Regina Obe)
  - GH-760, postgis_sfcgal: CG_Intersection, CG_3DIntersects, CG_Intersects,
            CG_Difference, CG_Union (and aggregate), CG_Triangulate, CG_Area,
            CG_3DDistance, CG_Distance (Loïc Bartoletti)
  - #5687, Don't rely on search_path to determine postgis schema
           Fix for PG17 security change (Regina Obe)

* Enhancements *

  - #3587, faster load of big lines in topologies (Sandro Santilli)
  - #5670, faster ST_CreateTopoGeo (Sandro Santilli)
  - #5531, documentation format upgraded to DocBook 5 (Sandro Santilli)
  - #5543, allow building without documentation (Sandro Santilli)
  - #5596, GH-749, Allow promoting column as an id
          in ST_AsGeoJson(record,..). (Jan Tojnar)
  - GH-744, Don't create docbook.css for the HTML manual,
            use style.css instead (Chris Mayo)
  - Faster implementation of point-in-poly cached index (Paul Ramsey)
  - Improve performance of ST_GeneratePoints (Paul Ramsey)
  - #5361, ST_CurveN, ST_NumCurves and consistency in
           accessors on curved geometry (Paul Ramsey)