@@ -5137,7 +5137,7 @@ Datum TopoGeo_AddLinestring(PG_FUNCTION_ARGS)
 
     POSTGIS_DEBUG(1, "Calling lwt_AddLine");
     elems = lwt_AddLine(topo, ln, tol, &nelems);
-    POSTGIS_DEBUG(1, "lwt_AddLine* returned");
+    POSTGIS_DEBUG(1, "lwt_AddLine returned");
     lwgeom_free(lwgeom);
     PG_FREE_IF_COPY(geom, 1);
     lwt_FreeTopology(topo);
@@ -5617,4 +5617,60 @@ Datum RegisterMissingFaces(PG_FUNCTION_ARGS)
   SPI_finish();
 
   PG_RETURN_NULL();
+}
+
+/*  TopoGeo_LoadGeometry(atopology, geom, tolerance) */
+Datum TopoGeo_LoadGeometry(PG_FUNCTION_ARGS);
+PG_FUNCTION_INFO_V1(TopoGeo_LoadGeometry);
+Datum TopoGeo_LoadGeometry(PG_FUNCTION_ARGS)
+{
+  text* toponame_text;
+  char* toponame;
+  double tol;
+  GSERIALIZED *geom;
+  LWGEOM *lwgeom;
+  LWT_TOPOLOGY *topo;
+
+  toponame_text = PG_GETARG_TEXT_P(0);
+  toponame = text_to_cstring(toponame_text);
+  PG_FREE_IF_COPY(toponame_text, 0);
+
+  geom = PG_GETARG_GSERIALIZED_P(1);
+  lwgeom = lwgeom_from_gserialized(geom);
+
+  tol = PG_GETARG_FLOAT8(2);
+  if ( tol < 0 )
+  {
+    PG_FREE_IF_COPY(geom, 1);
+    lwpgerror("Tolerance must be >=0");
+    PG_RETURN_NULL();
+  }
+
+  if ( SPI_OK_CONNECT != SPI_connect() )
+  {
+    lwpgerror("Could not connect to SPI");
+    PG_RETURN_NULL();
+  }
+
+  topo = lwt_LoadTopology(be_iface, toponame);
+  pfree(toponame);
+  if ( ! topo )
+  {
+    /* should never reach this point, as lwerror would raise an exception */
+    SPI_finish();
+    PG_RETURN_NULL();
+  }
+
+  POSTGIS_DEBUG(1, "Calling lwt_LoadGeometry");
+  lwt_LoadGeometry(topo, lwgeom, tol);
+  POSTGIS_DEBUG(1, "lwt_LoadGeometry returned");
+  lwgeom_free(lwgeom);
+  PG_FREE_IF_COPY(geom, 1);
+  lwt_FreeTopology(topo);
+
+  POSTGIS_DEBUG(1, "TopoGeo_LoadGeometry calling SPI_finish");
+
+  SPI_finish();
+
+  PG_RETURN_VOID();
 }
